--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Instagram</title>
+<title>Instagram</title>
+<link href="css/main.css" rel="stylesheet">
+<!-- Bootstrap core CSS -->
+<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+<div class="container h-100 phone">
+  <div class="row">
+    <div class="col phone-div"><img src="images/phones.png" class="img-fluid" width="318" height="512" alt=""/></div>
+    <div class="col right-col nopadding" style="background-color: transparent;">
+      <div class="row logo pl-1 pr-2">
+        <div id="logo"><img src="images/brand.png" class="img-fluid" alt="logo"/></div>
+        <div id="login">
+          <button class="btn"><img src="images/home.png" style="margin-right: 10px">Log in</button>
+        </div>
+      </div>
+      <div class="row text">
+        <h1>Capture and Share<br/>
+          the World's Moments</h1>
+        <p> Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+        <div class="row">
+          <div class="col"> <img src="images/badge-android.png" width="153" height="51" alt="Get it on Google Play"/> </div>
+          <div class="col"> <img src="images/badge-iphone.png" width="164" height="51" alt="Download on the App Store"/> </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <footer>
+    <div class="row">
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+		<li>&copy; 2014 INSTAGRAM</li>
+      </ul>
+    </div>
+  </footer>
+</div>
 </body>
 </html>
