--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -30,9 +30,9 @@
 
       <div class="text-container">
 
-        <h3>Capture and Share the World's Moments</h3>
+        <h1>Capture and Share the World's Moments</h1>
 
-        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+        <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
 
         <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
@@ -48,23 +48,18 @@
 </div>
 <div class="clearfix"></div>
 <footer>
-
-  <div class="links">
-    <ul>
-      <li><a>About Us</a></li>
-      <li><a>Support</a></li>
-      <li><a>Blog</a></li>
-      <li><a>Press</a></li>
-      <li><a>API</a></li>
-      <li><a>Jobs</a></li>
-      <li><a>Privacy</a></li>
-      <li><a>Terms</a></li>
-    </ul>
-  </div>
-
-  <div class="copy">
-  &copy; 2014 Instagram
-  </div>
+ 
+  <ul>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Support</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
+      <li><span>&copy; 2014 Instagram</span></li>
+  </ul>
 
 </footer>
 </body>
