--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,51 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+<div class="first-div"></div>
+<div class="container">
+  <div><img id="frame" src="./images/frame.png"></div>
+</div>
+<div class="text">
+  <h1>Capture and Share the World's Moments</h1>
+  
+  <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+  <p>Oh yeah, did we mention it's free?</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <a href=""></a>
+  <a href=""></a>
+</div>
+<div>
+  <img id="phones" src="./images/phones.png">
+</div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+<div>
+  <img id="brand" src="./images/brand.png">
+</div>
 
-  Oh yeah, did we mention it's free?
+<div>
+  <img id="home" src="./images/home.png">
+  <button>Log in</button>
+</div>
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+<div>
+  <img id="badge-android" src="./images/badge-android.png">
+  <img id="badge-iphone" src="./images/badge-iphone.png">
+</div>
+<div class="footer">
+  <a>About Us</a>
+  <a href="" >Support</a>
+  <a href="" >Blog</a>
+  <a href="" >Press</a>
+  <a href="" >API</a>
+  <a href="" >Jobs</a>
+  <a href="" >Privacy</a>
+  <a href="" >Terms</a>
+  <a href="" id="footer-date">&copy; 2014 Instagram</a>
+</div>
 </body>
 </html>
