--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -8,12 +8,16 @@
 
   <!--logo / top-half-->
 <div class="top-half">
-  <img class="ig-logo" src="images/brand.png" alt="Instragram logo image">
-
-  <p>Log in</p>
-  <img class="home-icon" src="images/home.png" alt="tiny home image">
+  <div class="top-container">
+      <img class="ig-logo" src="images/brand.png" alt="Instragram logo image">
+      
+      <div class="house-btn">
+        <span>Log in</span>
+        <img class="home-icon" src="images/home.png" alt="tiny home image">
+      </div>
+    </div>
 </div>
-
+  
   <img src="../images/frame.png" alt="">
 
   Capture and Share the World's Moments
