--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <section>
+    <img src="./images/bgtile.png" alt="bgtil" width="100%" height="290vh" class="bgtile">
+    <div class="container1"></div>
+    <div class="brand"></div><input type="button" value="Log in" class="button">
+    <div class="container2">
+  <h1>Capture and Share </br> the World's Moments</h1>
 
-  Capture and Share the World's Moments
+  <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</br> 
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  </br>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</br> 
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+</br>Oh yeah, did we mention it's free?
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
+  Download on the App Store</p>
+ <input type="button"  class="button-apple">
+ <input type="button"  class="button-android">
+    </div>
+  </section>
+<footer>
+  <ul>
+  <li>About Us</li> 
+  <li>Support</li> 
+  <li>Blog</li> 
+  <li>Press</li> 
+  <li>API</li> 
+  <li>Jobs</li> 
+  <li>Privacy</li> 
+  <li>Terms</li>  
   &copy; 2014 Instagram
+</ul>
+</footer>
 </body>
 </html>
