--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -29,11 +29,11 @@
 
       <div class="text-container">
 
-        <h1>Capture and Share<br> the World's Moments</h1>
+        <h1>Capture and Share<br>the World's Moments</h1>
 
-        <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+        <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life<br>with friends and family.</p>
 
-        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Take a picture or video, choose a filter to transform its look<br>and feel, then post to Instagram &mdash; it's that easy. You can<br>even share to Facebook, Twitter, Tumblr and more. It's a<br>new way to see the world.</p>
 
         <p>Oh yeah, did we mention it's free?</p>
 
