--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+  <head>
+    <title>Instagram</title>
+    <link rel="stylesheet" href="css/main.css">
+  </head>
+  <body>
+    <div class="background"></div>
+    <div class="content">
+      <aside class="img-phone">
+        <img src="images/phones.png" alt="phones">
+      </aside>
+      <section class="text">
+        <header class="tittle">
+          <img src="images/brand.png" alt="brand">
+          <a href="" id="log-in"><img src="images/home.png" alt="home"><span>Log in</span></a>
+        </header>
+        <article class="info">
+          <h3>Capture and Share the World's Moments</h3>
+          <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+          <a class="ios" href=""><img src="images/badge-iphone.png" alt=""></a>
+          <a class ="android" href=""><img src="images/badge-android.png" alt=""></a>
+        </article>
+      </section>
+    </div> 
+    <nav class="footer">
+      <a href="">About Us</a>
+      <a href="">Support</a>
+      <a href="">Blog</a>
+      <a href="">Press</a>
+      <a href="">API</a>
+      <a href="">Jobs</a>
+      <a href="">Privacy</a>
+      <a href="">Terms</a>
+      <a href="">&copy; 2014 Instagram</a>
+    </nav>
+  </body>
 </html>
