--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,48 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+<link rel="stylesheet" href="/Users/Mario/Documents/IronHack/lab-css-instagram-clone/starter-code/css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="flex-container">
+    <div class = "div-phones">
+    <img id = "phones" src = "https://github.com/ironhack-labs/lab-css-instagram-clone/blob/master/starter-code/images/phones.png?raw=true">
+  </div>
 
-  Capture and Share the World's Moments
+  <div class="logo-text">
+  <div class = "logo-button">
+    
+    <button id="button" type="button"><img src="https://raw.githubusercontent.com/ironhack-labs/lab-css-instagram-clone/master/starter-code/images/home.png">Log in</button>
+      <img id = "logo" src = "https://github.com/ironhack-labs/lab-css-instagram-clone/blob/master/starter-code/images/brand.png?raw=true">
+  </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class = "div-text">
+  <h1>Capture and Share the World's Moments</h1>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.
 
-  Oh yeah, did we mention it's free?
+  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. </p>
 
-  Download on the App Store
-  Get it on Google Play
+  <p>Oh yeah, did we mention it's free?</p>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  <img id = "app-store" src = "https://github.com/ironhack-labs/lab-css-instagram-clone/blob/master/starter-code/images/badge-iphone.png?raw=true">
+  <img id = "google-play" src = "https://github.com/ironhack-labs/lab-css-instagram-clone/blob/master/starter-code/images/badge-android.png?raw=true">
+</div>
+  </div>
+</div>
 
-  &copy; 2014 Instagram
+  
+<nav class = "navbar">
+   <a href ="#aboutus" class = "active">About Us</a>
+   <a href ="#support" class = "active">Support</a>
+   <a href ="#blog" class = "active">Blog</a>
+   <a href ="#press" class = "active">Press</a>
+   <a href ="#api" class = "active">API</a>
+   <a href ="#jobs" class = "active">Jobs</a>
+   <a href ="#privacy" class = "active">Privacy</a>
+   <a href ="#terms" class = "active">Terms</a>
+   <a id = "copyright">&copy; 2014 Instagram</a>
+  </nav>
+
 </body>
 </html>
