--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,39 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link href="./css/main.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-  Instagram
+  <img class="phone" src="images/phones.png">
+  <div class="background-bue"></div>
+  <div class="text">
+    <h1><img src="images/brand.png"></h1>
 
-  Capture and Share the World's Moments
+    <h2>Capture and Share the World's Moments</h2>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <p>Instagram is a <span>fast</span>, <span>beautiful</span> and <span>fun</span> way to share your life with friends and family.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Oh yeah, did we mention it's free?
+    <p>Oh yeah, did we mention it's free?</p>
 
-  Download on the App Store
-  Get it on Google Play
+    <img src="images/badge-iphone.png">
+    <img src="images/badge-android.png">
+  </div>
+  <nav class="bottom-nav">
+    <ul>
+      <li>ABOUT US
+      <li> SUPPORT </li>
+      <li> BLOG </li>
+      <li> PRESS </li>
+      <li> API </li>
+      <li> JOBS </li>
+      <li> PRIVACY </li>
+      <li> TERMS </li>
+      <li><span>&copy; 2014 Instagram</span></li>
+    </ul>
+  </nav>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  
 </body>
 </html>
