<style> fixed the alignment instagrIcon-loginButton

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -12,8 +12,11 @@
       </aside>
       <section class="text">
         <header class="tittle">
-          <img src="images/brand.png" alt="brand">
-          <a href="" id="log-in"><img src="images/home.png" alt="home"><span>Log in</span></a>
+          <img id="img-brand" src="images/brand.png" alt="brand">
+          <a href="" id="log-in">
+            <img id="img-home" src="images/home.png" alt="home">
+            <span>Log in</span>
+          </a>
         </header>
         <article class="info">
           <h3>Capture and Share the World's Moments</h3>
