--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,46 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link href="./css/main.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-  Instagram
+  <section>
+    <div class="container">
+    <img class="img-phones" src="./images/phones.png" alt="imagen telefonos">
+    <div class="description">
+      <div>
+        <img class="img-brand" src="./images/brand.png" alt="logo instagram">
+        <a class="button" href=""><img src="./images/home.png" alt="">Log in</a>
+        
+      </div>
+      <div class="posit">
+        <h1>Capture and Share the World's Moments</h1>
+        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+        <div class="playstore">
+          <img src="./images/badge-android.png" alt="boton android">
+          <img src="./images/badge-iphone.png" alt="boton iphone">
+        </div>
+      </div>
+    </div>
+  </div>
+  </section>
+  
+  <nav class="nav">
+    <div>
+      <a href="">About Us</a>
+      <a href="">Support</a>
+      <a href="">Blog</a>
+      <a href="">Press</a>
+      <a href=""> API</a>
+      <a href="">Jobs</a>
+      <a href="">Privacy</a>
+      <a href="">Terms</a>
+    </div>
+    <span>&copy; 2014 Instagram</span>
+  </nav>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
 </html>
+
