--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -30,8 +30,8 @@
           <img alt="brand" src="./images/brand.png"/>
         </h1>
 
-        <button class="log-in"><img alt="home" src="./images/home.png">Log in</button>
-
+        <button class="log-in"><img alt="home" src="./images/home.png"> Log in</button>
+        <div class="clearfix"></div>
       </div>
 
       <div class="text-content">
@@ -41,8 +41,9 @@
         <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
       
 
-        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.  
-        Oh yeah, did we mention it's free?</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. </p> 
+        
+        <p>Oh yeah, did we mention it's free?</p>
 
       </div>
 
@@ -54,6 +55,8 @@
       </div>
 
     </div>
+
+    <div class="clearfix"></div>
 
   </div>
 
