--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,50 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
-<body>
-  Instagram
+<body class="background-body"> 
+<div>
+    <img id="phones" src="./images/phones.png" alt="">
+</div>
 
-  Capture and Share the World's Moments
+<div>
+  <img id="brand" src="./images/brand.png" alt="">
+  <button id="log-in"><img src="./images/home.png" alt="">
+    Log in
+  </button>
+</div>
+ <div id="text">
+<p>
+<img src="./images/frame.png" alt="" id="frame">
+  <h2 id="h2-capture">Capture and Share the World's Moments</h2>
+<div id="text-below">
+  <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <p>Oh yeah, did we mention it's free?</p>
 
-  Oh yeah, did we mention it's free?
+</div>
+<div>
+ <img src="./images/badge-iphone.png" alt="" id="iphone">
+ <img src="./images/badge-android.png" alt="" id="android">
+</div>
 
-  Download on the App Store
-  Get it on Google Play
+<nav id="nav">
+  <a class="link-nav" href="#">About Us</a>
+  <a class="link-nav" href="#">Support</a>
+  <a class="link-nav" href="#">Blog</a>
+  <a class="link-nav" href="#">Press</a>
+  <a class="link-nav" href="#">API</a>
+  <a class="link-nav" href="#">Jobs</a>
+  <a class="link-nav" href="#">Privacy</a>
+  <a class="link-nav" href="#">Terms</a><span id="copy"> &copy; 2014 Instagram</span>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
 
-  &copy; 2014 Instagram
+</nav>
+
+
+
 </body>
 </html>
