--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,47 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="background-blue"></div>
+  <div class="container">
+    <div class="container-core">
+      <div class="phones-img">
+          <img src="./images/phones.png" alt="phones">
+      </div>
+      <div class="content">
+        <div class="content-header">
+            <img src="./images/brand.png" alt="brand">
+            <div class="button">Log in
+              <img src="./images/home.png" alt="home">
+            </div>
+        </div>
+        <div class="content-body">
+            <h3>Capture and Share the World's Moments</h3>
+            <p>Instagram is a <span>fast</span>, <span>beautiful</span> and <span>fun</span> way to share your life with friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+            <img src="./images/badge-iphone.png" alt="iphone">
+            <img src="./images/badge-android.png" alt="android">
+        </div>
+      </div>
+    </div>
+    <div class="container-footer">
+      <nav>
+        <ul>
+          <li>About Us</li>
+          <li>Support</li>
+          <li>Blog</li>
+          <li>Press</li>
+          <li>API</li>
+          <li>Jobs</li>
+          <li>Privacy</li>
+          <li>Terms</li>
+          <li class="copyright">&copy; 2014 Instagram</li>
+        </ul>
+      </nav>
+    </div>
+  </div>
 </body>
 </html>
