Login button modified-background color changed

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -13,9 +13,10 @@
       </div>
       <div class="content">
         <div class="content-header">
-            <img src="./images/brand.png" alt="brand">
-            <div class="button">Log in
+            <img src="./images/brand.png" alt="brand" class="logo">
+            <div class="button">
               <img src="./images/home.png" alt="home">
+              <p>Log in</p>
             </div>
         </div>
         <div class="content-body">
