--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,72 @@
 <!DOCTYPE html>
+
 <html lang="en">
+  
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" type="text/css" href="./css/main.css">
   <title>Instagram</title>
 </head>
+
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div>
+    <img id="background-img">
+  </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <div id="main-container">
 
-  Oh yeah, did we mention it's free?
+    <div> 
+      <img class="img-mobiles">
+    </div>
 
-  Download on the App Store
-  Get it on Google Play
+    <div class="main-content">
+      <img class="img-instagram">
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      <button class="login">
+        <img class="home">
+      </button>
 
-  &copy; 2014 Instagram
+    <div>
+      <img class="white-background">
+
+      <h3>  Capture and Share the World's Moments </h3>
+      <p>
+          Instagram is a fast, beautiful and fun way to share your life with friends and family.
+
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        
+          Oh yeah, did we mention it's free?
+      </p>
+
+      <img class="stores">
+
+    </div>
+
+  </div>  
+  
+  <footer>
+      <nav>
+          <a class="links" href="index.html">About Us &nbsp</a>
+          <a class="links" href="index.html">Support &nbsp</a>
+          <a class="links" href="index.html">Blog &nbsp</a>
+          <a class="links" href="index.html">Press &nbsp</a>
+          <a class="links" href="index.html">API &nbsp</a>
+          <a class="links" href="index.html">Jobs &nbsp</a>
+          <a class="links" href="index.html">Privacy &nbsp</a>
+          <a class="links" href="index.html">Terms&nbsp</a>
+          <span>
+              &copy; 2014 Instagram
+          </span>
+      </nav>
+      
+  </footer>
+
+</div>
+
 </body>
+
 </html>
