--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <html lang="en">
-  
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -48,7 +48,7 @@
 
   </div>  
   
-  <footer>
+  <footer class="bottom">
       <nav>
           <a class="links" href="index.html">About Us &nbsp</a>
           <a class="links" href="index.html">Support &nbsp</a>
