--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -24,7 +24,6 @@
     </div>
 
     <div class="main-content">
-      <img class="img-instagram">
 
       <button class="login">
         <img class="home">
@@ -32,6 +31,7 @@
 
     <div>
       <img class="white-background">
+      <img id="img-instagram" src="images/brand.png">
 
       <h3>  Capture and Share the World's Moments </h3>
       <p>
@@ -40,6 +40,9 @@
           Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
         
           Oh yeah, did we mention it's free?
+
+          <img src="images/badge-iphone.png">
+          <img src="images/badge-android.png">
       </p>
 
       <img class="stores">
