--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -19,15 +19,15 @@
 
   <div id="main-container">
 
-    <div> 
-      <img class="img-mobiles">
+    <div class="img-mobiles"> 
+      <img >
     </div>
 
     <div class="main-content">
 
-      <button class="login">
-        <img class="home">
-      </button>
+    <button class="login">
+      <img class="home">
+    </button>
 
     <div>
       <img class="white-background">
