CSS | Instagram Clone

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <section class="container-blue">
+    <div class="image-phones"></div>
+    <nav class="title-main">
+        <a href="#">Log in</a>
+    </nav>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class="content-main">
+      <div class="content-left">
+        <img src="images/phones.png" alt="">
+      </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <div class="content-right">
+        <h2>Capture and Share the World's Moments</h2>
+        <p>Instagram is a <strong>fast</strong>,<strong>beautiful</strong> and <strong>fun</strong> way to share your
+          life with friends and family.</p>
 
-  Oh yeah, did we mention it's free?
+        <p>
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+          that
+          easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Download on the App Store
-  Get it on Google Play
+        <p>
+          Oh yeah, did we mention it's free?</p>
+        <div class="image-badges">
+          <a class="image-android" href="#">
+            <img src="images/badge-android.png" alt="">
+          </a>
+          <a class="image-iphone" href="#">
+            <img src="images/badge-iphone.png" alt="">
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  <section class="container-white">
 
-  &copy; 2014 Instagram
+  </section>
+
+  <footer class="container-link">
+    <nav>
+      <ul>
+        <li><a href="">About Us</a></li>
+        <li><a href="">Support</a></li>
+        <li><a href="">Blog</a></li>
+        <li><a href="">Press</a></li>
+        <li><a href="">API</a></li>
+        <li><a href="">Jobs</a></li>
+        <li><a href="">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+        <span>&copy; 2014 Instagram</span>
+      </ul>
+    </nav>
+  </footer>
 </body>
+
 </html>
