--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,52 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <header>
+    <div class="container">
+      <img class="phones" src="images/phones.png"/>
+      <div class="box">
+        <nav class="nav--top">
+          <img src="images/brand.png"/>
+          <a class="nav__home" href="#">
+            <img src="images/home.png"/>
+            <span>Log in</span>
+          </a>
+        </nav>
+        <section class="intro">
+          <h1>Capture and Share the World's Moments</h1>
+          <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even 
+            share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+          <div class="app-download">
+            <img src="images/badge-iphone.png"/>
+            <img src="images/badge-android.png"/>
+          </div>
+        </section>
+      </div>
+    </div>
+    <footer>
+        <div class="container">
+        <nav class="nav--bottom">
+          <ul class="bottom__links">
+            <a class="bottom__link" href="#">About Us<li class="bottom__item"></li></a>
+            <a class="bottom__link" href="#">Support<li class="bottom__item"></li></a>
+            <a class="bottom__link" href="#">Blog<li class="bottom__item"></li></a>
+            <a class="bottom__link" href="#">Press<li class="bottom__item"></li></a>
+            <a class="bottom__link" href="#">API<li class="bottom__item"></li></a>
+            <a class="bottom__link" href="#">Jobs<li class="bottom__item"></li></a>
+            <a class="bottom__link" href="#">Privacy<li class="bottom__item"></li></a>
+            <a class="bottom__link" href="#">Terms<li class="bottom__item"></li></a>
+          </ul>
+          <span>&copy; 2014 Instagram</span>
+        </nav>
+      </div>
+      </footer>
+  </header>
+  
 </body>
 </html>
