--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,59 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,600" rel="stylesheet">
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="general-container">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class="left-content">
+      <img src="images/phones.png" alt="phones.png">
+    </div>  
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <div class="right-content">  
+      <div class="row">
+        <div class="left-picture"><img src="images/brand.png" alt="brand.png" width="80%"></div>
+        <div class="right-picture"><img src="images/home.png" alt="home.png"></div>
+      </div> 
+      
+        
+      <div class="container"> 
+        <div class="text-block">
+          <h2>Capture and Share<br> the World's Moments</h2>
+          <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a<br> new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+            <div class="badge">
+            <div class="badge-right">
+                  <img src="images/badge-iphone.png" alt="badge-iphone.png">
+            </div>
+          <div class="badge-left">
+                  <img src="images/badge-android.png" alt="badge-android.png">
+             </div>
+           </div>     
+      </div>
 
-  Oh yeah, did we mention it's free?
+    </div>
 
-  Download on the App Store
-  Get it on Google Play
+  </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  <div class="footer">
+    <footer>
+      <a href="https://www.instagram.com/about/us/">About Us</a>
+      <a href="https://help.instagram.com/">Support</a>
+      <a href="#">Blog</a>
+      <a href="https://instagram-press.com/">Press</a>
+      <a href="https://www.instagram.com/developer/">API</a>
+      <a href="https://www.instagram.com/about/jobs/">Jobs</a>
+      <a href="https://help.instagram.com/519522125107875">Privacy</a>
+      <a href="https://help.instagram.com/581066165581870">Terms</a>
+        &copy; 2014 Instagram
+    </footer>
+  </div>
 
-  &copy; 2014 Instagram
 </body>
+
 </html>
