--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,65 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <section id="one">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div id="phone">
+      <img src="images/phones.png" alt="phones">
+    </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  </section>
 
-  Oh yeah, did we mention it's free?
+  <section id="two">
 
-  Download on the App Store
-  Get it on Google Play
+    <div id="instagram">
+      <img src="images/brand.png" alt="brand">
+    </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+    <div id="button">
+      <button>
+        <img src="images/home.png" alt="home">
+        Log in
+      </button>
+    </div>
 
-  &copy; 2014 Instagram
+    <div id="text">
+      <h1> Capture and Share <br> the World's Moments
+      </h1>
+      <p> Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your
+        life with friends and family.
+      </p>
+      <p> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+        that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      </p>
+      <p> Oh yeah, did we mention it's free?
+      </p>
+      <img src="images/badge-iphone.png" alt="Iphone">
+      <img src="images/badge-android.png" alt="Android">
+    </div>
+
+  </section>
+
+  <footer id="footer">
+    About Us
+    Support
+    Blog
+    Press
+    API
+    Jobs
+    Privacy
+    Terms
+    <span> &copy; 2014 Instagram</span>
+  </footer>
+
+
 </body>
+
 </html>
