--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-  Instagram
+  <div class="bg-color"></div>
+  <div class="site">
+    Instagram
 
   Capture and Share the World's Moments
 
@@ -27,5 +30,6 @@
   Terms
 
   &copy; 2014 Instagram
+  </div>
 </body>
 </html>
