--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,50 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Spotify</title>
+    <link href="css/main.css" rel="stylesheet" />
+  </head>
+  <body>
+    <nav>
+      <img src="images/spotify-logo.png" alt="Spotify" />
+      <navbar class="navbar">
+        <ul>
+          <li><a href="#">Premium</a></li>
+          <li><a href="#">Discover</a></li>
+          <li><a href="#">Help</a></li>
+          <li><a href="#">Download</a></li>
+        </ul>
+      </navbar>
+    </nav>
+    <header class="header">
+      <h1>Music for everyone.</h1>
+      <p>
+        Spotify is now free on mobile, tablet and computer.<br />
+        Listen to the right music, wherever you are.
+      </p>
+    </header>
+    <h2>
+      What’s on Spotify?
+      <hr />
+    </h2>
+    <section class="whatsOn">
+      <div class="whatsOnItem">
+        <div><img src="images/music-icon.png" /></div>
+        <h3>Millions of Songs</h3>
+        <p>There are millions of songs on Spotify</p>
+      </div>
+      <div class="whatsOnItem">
+        <div><img src="images/high-quality-icon.png" /></div>
+        <h3>HD Music</h3>
+        <p>Listen to music as if you were listening live</p>
+      </div>
+      <div class="whatsOnItem">
+        <div><img src="images/devices-icon.png" /></div>
+        <h3>Stream Everywhere</h3>
+        <p>Stream music on your smartphone, tablet or computer</p>
+      </div>
+    </section>
 
-<head>
-  <title>Instagram</title>
-  <link href="css/main.css" rel="stylesheet" />
-</head>
-
-<body>
-  <div class="bg-color"></div>
-  <div class="header"><img src="images/brand.png" alt="Instagram" /></div>
-  <button class="button"><img src="images/home.png" />Log in</button>
-  <div class="phone"><img src="images/phones.png" alt="Everything about you minus the real stuff!" /></div>
-  <div class="site">
-    <h1>Capture and Share<br />the World's Moments<br /></h1>
-    <p>
-      Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share
-      your life with friends and family.
-    <p>
-      Take a picture or video, choose a
-      filter to transform its look and feel, then post to Instagram &mdash;
-      it's that easy. You can even share to Facebook, Twitter, Tumblr and
-      more. It's a new way to see the world.
-    </p>
-    <p>
-      Oh yeah, did we mention it's
-      free?
-    </p>
-    <ul>
-      <li><a href="#"><img src="images/badge-iphone.png" alt="Download Instagram for iOs" /></a></li>
-      <li><a href="#"><img src="images/badge-android.png" alt="Download Instagram for Android" /></a></li>
-    </ul>
-    </p>
-  </div>
-  <footer>
-    <ul>
-      <li><a href="#">About Us</a></li>
-      <li><a href="#">Support</a></li>
-      <li><a href="#">Blog</a></li>
-      <li><a href="#">Press</a></li>
-      <li><a href="#">API</a></li>
-      <li><a href="#">Jobs</a></li>
-      <li><a href="#">Privacy</a></li>
-      <li><a href="#">Terms</a></li>
-      <li>&copy; 2014 Instagram</li>
-    </ul>
-  </footer>
-</body>
-
+    <section class="player">
+      <div>
+        <h2>It’s as yeezy as Kanye West.<hr></h2>
+        <h3>Search</h3>
+        <p>
+          Know what you want to listen to?<br />
+          Just search and hit play.
+        </p>
+        <h3>Browse</h3>
+        <p>
+          Check out the latest charts,<br />
+          brand new releases and great<br />
+          playlists for right now.
+        </p>
+        <h3>Discover</h3>
+        <p>
+          Enjoy new music every Monday<br />
+          with your own personal playlist.<br />
+          Or sit back and enjoy Radio.
+        </p>
+      </div>
+      <div><img src="images/spotify-app.jpg" /></div>
+    </section>
+  </body>
 </html>
