pagina de Instagram, los estilos quedaron muy bonitos, el footer podría tener más :hankey:

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,56 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="../starter-code/css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <header>
+      <img id= "logo" src="../starter-code/images/brand.png" alt="">
+      <button><img src="../starter-code/images/home.png" alt=""> Log In</button>
+  </header>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <section>
 
+    <img src="../starter-code/images/phones.png" alt="">
+
+  </section>
+  
+  <article>
+
+  <h2>Capture and Share the World's Moments</h2>
+
+  <p>
+  Instagram is a <span>fast, beautiful</span> and <span>fun </span>way to share your life with friends and family.
+  </p>
+  <p>
   Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
+  </p>
+  <p>
   Oh yeah, did we mention it's free?
+ </p>
 
-  Download on the App Store
-  Get it on Google Play
+<img src="../starter-code/images/badge-iphone.png" alt="">
+<img src="../starter-code/images/badge-android.png" alt="">
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+</article>
 
-  &copy; 2014 Instagram
+<footer>
+
+<ul>
+ <li>About Us</li> 
+ <li>Support</li> 
+ <li>Blog</li> 
+ <li>Press</li> 
+ <li>API</li> 
+<li>Jobs</li> 
+ <li>Privacy</li> 
+ <li>Terms</li> 
+<li>&copy; 2014 Instagram</li> 
+</ul>
+
+</footer>
+
+  
 </body>
 </html>
