Changes applied as requested in IronHack's GitHub repository. Added .html and .css files.

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,41 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <section class="background">
+    <div class="section-phone">
+      <img src="images/phones.png"; alt="Phones">
+    </div>  
+  </section>
+  <section>
+    <div class="div-heading">
+      <img src="images/brand.png"; alt="Brand Instagram">
+      <buttom class="buttom" type="submit"><img src="images/home.png"; alt="Home"; weight="15px"; height="15px">  Log in</buttom>
+    </div>
+      <img class="img-frame" src="images/frame.png">
+      <div class="text-frame">
+        <h2>Capture and Share the World's Moments</h2>
+        <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+      </div>
+    <div class="buttons2">
+      <buttom type="submit"><img src="images/badge-iphone.png"; alt="Badge Iphone"></buttom>
+      <buttom type="submit"><img src="images/badge-android.png"; alt="Badge Iphone"></buttom>
+    </div>
+    <div class="links-bottom">  
+      <a href="link">About Us</a>
+      <a href="#">Support</a>
+      <a href="#">Blog</a>
+      <a href="#">Press</a>
+      <a href="#">API</a>
+      <a href="#">Jobs</a>
+      <a href="#">Privacy</a>
+      <a href="#">Terms</a>
+      &copy; 2014 Instagram
+    </div>  
+  </section>
 </body>
 </html>
