--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,50 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+<div class="left-side">
+  <img src="images/phones.png">
+</div>
+  
+<div class="right-side">
+  <header>
+  <img src="images/brand.png"/>
+  <button>
+  <img src="images/home.png"/> Log in
+  </button>
+  </header>
+  <div class="rs-text"><h2>Capture and Share the World's Moments</h2>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Oh yeah, did we mention it's free?
+  <p>Oh yeah, did we mention it's free?</p>
 
-  Download on the App Store
-  Get it on Google Play
+  <div class="download-buttons">
+    <img src="images/badge-iphone.png"/>
+    <img src="images/badge-android.png"/>
+  </div>
+  </div>
+</div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  <footer>
+  <ul>
+    <li>ABOUT US</li>
+    <li>SUPPORT</li>
+    <li>BLOG</li>
+    <li>PRESS</li>
+    <li>API</li>
+    <li>JOBS</li>
+    <li>PRIVACY</li>
+    <li>TERMS </li>
+    <li>  &copy; 2014 Instagram</li>
+  </ul>
+  </footer>
 
-  &copy; 2014 Instagram
+
 </body>
 </html>
