Changes applied to html and css file (fixed buttons not working)

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -13,7 +13,7 @@
   <section>
     <div class="div-heading">
       <img src="images/brand.png"; alt="Brand Instagram">
-      <buttom class="buttom" type="submit"><img src="images/home.png"; alt="Home"; weight="15px"; height="15px">  Log in</buttom>
+      <button class="button" type="button"><img src="images/home.png"; alt="Home"; weight="15px"; height="15px">  Log in</button>
     </div>
       <img class="img-frame" src="images/frame.png">
       <div class="text-frame">
@@ -23,8 +23,8 @@
         <p>Oh yeah, did we mention it's free?</p>
       </div>
     <div class="buttons2">
-      <buttom type="submit"><img src="images/badge-iphone.png"; alt="Badge Iphone"></buttom>
-      <buttom type="submit"><img src="images/badge-android.png"; alt="Badge Iphone"></buttom>
+      <a href="#"><img src="images/badge-iphone.png"; alt="Badge Iphone";></a>
+      <a href="#"><img src="images/badge-android.png"; alt="Badge Iphone"></a>
     </div>
     <div class="links-bottom">  
       <a href="link">About Us</a>
