Commit dos arquivos index e main

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="css/main.css">
   <title>Instagram</title>
 </head>
-<body>
-  Instagram
+<body class="body-color">
+  <!-- Instagram -->
+ <div>
+   <!-- Seção do Instagram -->
+ <section id="instagram" class="frame">
+     <img src="images/brand.png" alt="top-instagram"/>
+  <button class="button1">
+      <img src="images/home.png" Login alt="button"> Teste
+  </button>
+ </section>
+ <!-- Seção do frame -->
+ <section id="frame" class="frame">
+  <div>    
+    <h2> Capture and Share the World's Moments</h2>  
+    <p> Instagram is a <strong>fast</strong>, beautiful and fun way to share your life with friends and family.</p>
+    <p> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+    <p class="p"> Oh yeah, did we mention it's free?</p>
 
-  Capture and Share the World's Moments
+    <img src="images/badge-iphone.png" alt="Imagem Iphone Bottom">
+    <img src="images/badge-android.png" alt="Imagem Android Bottom">
+  </div>
+ </section>
+ <section  id="phone">
+    <img src="images/phones.png" alt="left-phone"/>
+ </section>
+</div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <!-- <footer> Download on the App Store
+  Get it on Google Play </footer> -->
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+<footer>
+  <!-- Seção Footer -->
+<section id="footer">
+ <div>
+    <ul>
+        <li><a class="link" href='#aboutus'>About Us</a></li>
+        <li><a class="link" href='#support'>Support</a></li>
+        <li><a class="link" href='#blog'>Blog</a></li>
+        <li><a class="link" href='#press'>Press</a></li>
+        <li><a class="link" href='#api'>API</a></li>
+        <li><a class="link" href='#jobs'>Jobs</a></li>
+        <li><a class="link" href='#privacy'>Privacy</a></li>
+        <li><a class="link" href='#blog'>Blog</a></li>
+      </ul>
+  <!-- <nav>
+   About Us
+   Support
+   Blog
+   Press
+   API
+   Jobs
+   Privacy
+   Terms
+  </nav> -->
+  <p>&copy; 2014 Instagram</p>  
+ </div>
+</section>  
+</footer>
 </body>
 </html>
