--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,51 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="container">
+    <div class="img col">
+      <img src="images/phones.png" alt="phone">
+    </div>
+    <div class="col text-box">
+        <div class="instagram-logo inline">
+          <img class="isntagram-logo" src="images/brand.png" alt="instagram logo">
+        </div>
+        <div class="btn inline">
+          <img src="images/home.png" alt="home logo">  <span class="login">Log in</span>
+        </div>
+        <div class="box">
+          <div class="text">
+            <h1>Capture and Share the World's Moments</h1>
+            <p>Instagram is a <span class="strong">fast</span>, <span class="strong">beautiful</span> and <span class="strong">fun</span> way to share your life with friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+            <div class="badge">
+                <img src="images/badge-iphone.png" alt="badge iphone">
+                <img src="images/badge-android.png" alt="badge android">
+              </div>
+          </div>
+        </div>
+        
+    </div>
+    <div class="clearfix"></div>
+ 
+    <footer>
+      <ul>
+        <li class="inline">About us</li>
+        <li  class="inline">Support</li>
+        <li class="inline">Blog</li>
+        <li class="inline">Press</li>
+        <li class="inline">Api</li>
+        <li class="inline">Jobs</li>
+        <li class="inline">Privacy</li>
+        <li class="inline">Terms</li>
+        <li class="inline brand">&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
+  </div>
 </body>
 </html>
+
+  
