--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,45 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="main-container">
+    <span class="sub-container phones">
+      <img class="flex-item phones" src="/starter-code/images/phones.png" alt="phones">
+    </span>
+    <span class="sub-container content">
+      <span class="sub-container logo-login">
+        <img class="flex-item" src="/starter-code/images/brand.png" alt="instagram logo">
+        <button class="flex-item">Log In</button>
+      </span>
+      <span class="sub-container content about-us">
+        <h1>Capture and Share the World's Moments</h1>
+        Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        Oh yeah, did we mention it's free?
+        Download on the App Store
+        Get it on Google Play
+      </span>
+      <span class="sub-container app-store-logos">
+        <img class="flex-item" src="/starter-code/images/badge-iphone.png" alt="apple app store logo">
+        <img class="flex-item" src="/starter-code/images/badge-android.png" alt="google play store logo">
+      </span>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+    </span>
+  </div>
 </body>
+<footer class="footer">
+  <ul>
+    <li>ABOUT US</li>
+    <li>SUPPORT</li>
+    <li>BLOG</li>
+    <li>PRESS</li>
+    <li>API</li>
+    <li>JOBS</li>
+    <li>PRIVACY</li>
+    <li>TERMS</li>
+  </ul>
+  &copy; 2014 Instagram
+</footer>
 </html>
